[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["adusa"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.18.2"
scipy = "1.4.1"
beautifulsoup4 = "^4.8.2"
requests = "^2.21"
lxml = "^4.3"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
flake8 = "^3.7.9"
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
